typescript/checker/tests/conformance/es6/restParameters/emitRestParametersFunctionPropertyES6.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            21,
        ),
        hi: BytePos(
            24,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/restParameters/emitRestParametersFunctionPropertyES6.ts:2:5
  |
2 | var obj: {
  |     ^^^

